--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,19 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
-<body>
+  </head>
+  <body>
+    <!-- Messenger Chat Plugin Code -->
     <div id="fb-root"></div>
 
+    <!-- Your Chat Plugin code -->
     <div id="fb-customer-chat" class="fb-customerchat">
     </div>
 
     <script>
-        window.fbAsyncInit = function() {
+      var chatbox = document.getElementById('fb-customer-chat');
+      chatbox.setAttribute("page_id", "105869182480903");
+      chatbox.setAttribute("attribution", "biz_inbox");
+    </script>
+
+    <!-- Your SDK code -->
+    <script>
+      window.fbAsyncInit = function() {
         FB.init({
           xfbml            : true,
           version          : 'v16.0'
@@ -28,12 +37,20 @@
         fjs.parentNode.insertBefore(js, fjs);
       }(document, 'script', 'facebook-jssdk'));
     </script>
-    
-    <script>
-        var chatbox = document.getElementById('fb-customer-chat');
-        chatbox.setAttribute("page_id", "105869182480903");
-        chatbox.setAttribute("attribution", "biz_inbox");
-      </script>
-</body>
-</html>
 
+    <div
+      class="fb-customerchat"
+      attribution="setup_tool"
+      page_id="101318394745446"
+      theme_color="#fa3c4c"
+      logged_in_greeting="I am here to help you. Say hi to start a conversation!"
+      logged_out_greeting="Log in and let's get everything done!"
+    ></div>
+    <center><h1>Welcome To TLopia Code Chatbot</h1></center>
+    <center><h2>Please Login to use the Chatbot</h2></center>
+    <br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br />
+    <center><h3>Stay Safe, and wait for our upcoming new version!!</h3></center>
+    <center><h3>Thank you for visiting us!!</h3></center>
+    <br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br />
+  </body>
+</html>
