--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,36 +7,40 @@
     <title>Document</title>
   </head>
   <body>
+    <!-- <script
+      src="//code.tidio.co/b9kwunz4d8dhpj4iqst2jx4iquxbxxt4.js"
+      async
+    ></script> -->
+
     <!-- Messenger Chat Plugin Code -->
     <div id="fb-root"></div>
 
     <!-- Your Chat Plugin code -->
-    <div id="fb-customer-chat" class="fb-customerchat"></div>
+    <div id="fb-customer-chat" class="fb-customerchat">
+    </div>
 
     <script>
-      var chatbox = document.getElementById("fb-customer-chat");
+      var chatbox = document.getElementById('fb-customer-chat');
       chatbox.setAttribute("page_id", "105869182480903");
       chatbox.setAttribute("attribution", "biz_inbox");
     </script>
 
     <!-- Your SDK code -->
     <script>
-      window.fbAsyncInit = function () {
+      window.fbAsyncInit = function() {
         FB.init({
-          xfbml: true,
-          version: "v16.0",
+          xfbml            : true,
+          version          : 'v16.0'
         });
       };
 
-      (function (d, s, id) {
-        var js,
-          fjs = d.getElementsByTagName(s)[0];
+      (function(d, s, id) {
+        var js, fjs = d.getElementsByTagName(s)[0];
         if (d.getElementById(id)) return;
-        js = d.createElement(s);
-        js.id = id;
-        js.src = "https://connect.facebook.net/en_US/sdk/xfbml.customerchat.js";
+        js = d.createElement(s); js.id = id;
+        js.src = 'https://connect.facebook.net/en_US/sdk/xfbml.customerchat.js';
         fjs.parentNode.insertBefore(js, fjs);
-      })(document, "script", "facebook-jssdk");
+      }(document, 'script', 'facebook-jssdk'));
     </script>
 
     <div
