--- a/views/index.ejs
+++ b/views/index.ejs
@@ -16,41 +16,44 @@
     <div id="fb-root"></div>
 
     <!-- Your Chat Plugin code -->
-    <div id="fb-customer-chat" class="fb-customerchat">
-    </div>
+    <div id="fb-customer-chat" class="fb-customerchat"></div>
 
     <script>
-      var chatbox = document.getElementById('fb-customer-chat');
+      const chatbox = document.getElementById("fb-customer-chat");
       chatbox.setAttribute("page_id", "105869182480903");
       chatbox.setAttribute("attribution", "biz_inbox");
     </script>
 
     <!-- Your SDK code -->
     <script>
-      window.fbAsyncInit = function() {
+      window.fbAsyncInit = function () {
         FB.init({
-          xfbml            : true,
-          version          : 'v16.0'
+          xfbml: true,
+          version: "v16.0",
         });
       };
 
-      (function(d, s, id) {
+      (function (d, s, id) {
         var js, fjs = d.getElementsByTagName(s)[0];
+        
+        console.log(d.getElementsByTagName(s)[0]);
         if (d.getElementById(id)) return;
-        js = d.createElement(s); js.id = id;
-        js.src = 'https://connect.facebook.net/en_US/sdk/xfbml.customerchat.js';
+        js = d.createElement(s);
+        js.id = id;
+        js.src = "https://connect.facebook.net/en_US/sdk/xfbml.customerchat.js";
         fjs.parentNode.insertBefore(js, fjs);
-      }(document, 'script', 'facebook-jssdk'));
+      })(document, "script", "facebook-jssdk");
     </script>
-
+<!-- 
     <div
+
       class="fb-customerchat"
       attribution="setup_tool"
       page_id="101318394745446"
       theme_color="#fa3c4c"
       logged_in_greeting="I am here to help you. Say hi to start a conversation!"
       logged_out_greeting="Log in and let's get everything done!"
-    ></div>
+    ></div> -->
     <center><h1>Welcome To ByteCanvas Chatbot</h1></center>
     <center><h2>Please Login to use the Chatbot</h2></center>
     <br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br />
